# dancemanager

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  SQLite_Migration.md  STUDIO_MANAGEMENT.md  UI_IMPLEMENTATION.md  install_packages.py  pyproject.toml  requirements.md  requirements.txt  setup.sh  test_app.py  test_import.py
dancemanager/: __main__.py  classes.py  cli.py  dancers.py  dances.py  instructors.py  migrate.py  models.py  recital.py  store.py  store_sqlite.py  studios.py  teams.py  utils.py
dancemanager/api/: __init__.py  schemas.py
dancemanager/api/routes/: __init__.py  classes.py  dancers.py  dances.py  import_export.py  instructors.py  recitals.py  studios.py  teams.py
dancemanager/api/schemas/: models.py
dancemanager/migrations/: 001_initial_schema.py  002_populate_data.py  003_sync_dancer_class_ids.py  004_add_dance_team_ids.py  005_normalize_class_names.py  006_normalize_entity_names.py  007_add_studio_columns.py
dancemanager/web/: main.py
dancemanager/web/templates/: base.html  index.html
dancemanager/web/templates/classes/: detail.html  form.html  list.html
migrations/: 001_initial_schema.py  002_populate_data.py
tests/: test_dance_teams.py  test_dancer_routes.py  test_dances.py  test_instructors.py  test_recital.py  test_store.py  test_studios.py  test_web_forms.py  test_web_interface.py  test_web_interface_01_dashboard_list.py  test_web_interface_02_detail_create.py  test_web_interface_03_update_delete.py  test_web_interface_04_recital_schedule.py  test_web_interface_05_templates_logo.py  web_helpers.py
(+19 files in other folders)
